--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
                 ><i class="fa-solid fa-cart-shopping"></i
               ></a>
             </li>
-            <li><i class="fa-solid fa-user"></i></li>
+            <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
         </div>
         <div class="search">
@@ -57,13 +57,13 @@
           <tr>
             <td>
               <div class="miniscreen1">
-                <img src="images/caralhos.jpg" alt="" width="400" height="400" />
+                <img src="images/month.png" alt="" width="400" height="400" />
                 <h1>Six Month Courses</h1>
               </div>
             </td>
             <td>
               <div class="miniscreen1">
-                <img src="images/caralhos.jpg" alt="" width="400" height="400" />
+                <img src="images/week.png" alt="" width="400" height="400" />
                 <h1>Six week Courses</h1>
               </div>
             </td>
@@ -75,11 +75,9 @@
             <td>
               <a href="week.html"><button class="button">See more</button></a>
             </td>
-            <td>
-              <a href="invoice.html"><button class="button">buy</button></a>
-            </td>
           </tr>
         </table>
+        <a href="invoice.html"><button class="button">buy</button></a>
       </div>
       
     </div>
