--- a/landscaping.html
+++ b/landscaping.html
@@ -35,7 +35,7 @@
                 ><i class="fa-solid fa-cart-shopping"></i
               ></a>
             </li>
-            <li><i class="fa-solid fa-user"></i></li>
+            <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
         </div>
         <div class="search">
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="conteudoCourses">
-      <img src="images/garden.jpg" alt="" width="1336" height="450" />
+      <img src="images/land.jpg" alt="" width="1336" height="450" />
       <h2>Landscaping Course</h2>
       <p>
         Duration: 6 months <br />
