--- a/news.html
+++ b/news.html
@@ -32,7 +32,7 @@
              <i class="fa-solid fa-cart-shopping"></i
               ></a>
             </li>
-            <li><i class="fa-solid fa-user"></i></li>
+            <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
         </div>
         <div class="search">
