--- a/log.html
+++ b/log.html
@@ -49,6 +49,8 @@
           </div>
         </div>
       </div>
-      <div class="login"></div>
+      <div class="login">
+        
+      </div>
 </body>
 </html>
