--- a/buy.html
+++ b/buy.html
@@ -24,7 +24,8 @@
             the Nation
           </h2>
         </div>
-        <div class="menu">
+        <div class="menu" id="navLinks">
+          <i class="fa fa-times" onclick="hidemenu()"></i>
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -38,6 +39,7 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
+          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
         <div class="search">
           <input
@@ -122,5 +124,26 @@
         </div>
         <a href="">confirm</a>
     </div>
+    <footer>
+      <p>Copyright 2024</p>
+      <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a></li>
+      <li><a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a></li>
+      <li><a href="https://mail.google.com/"><i class="fa-solid fa-envelope"></i></a></li>
+    </footer>
+          <!--javascript-->
+          <script>
+
+
+            var navLinks = document.getElementById("navLinks");
+      
+       function showmenu(){
+           navLinks.style.right ="0";
+       }
+      
+       function hidemenu(){
+           navLinks.style.right ="-200px";
+       }
+       </script>
   </body>
 </html>
