--- a/firstaid.html
+++ b/firstaid.html
@@ -23,7 +23,8 @@
             the Nation
           </h2>
         </div>
-        <div class="menu">
+        <div class="menu" id="navLinks">
+          <i class="fa fa-times" onclick="hidemenu()"></i>
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -37,6 +38,7 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
+          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
         <div class="search">
           <input
@@ -49,44 +51,83 @@
         </div>
       </div>
     </div>
-    <div class="conteudoCourses">
-      <img src="images/first.jpg" alt="" width="1336" height="450" />
-      <h2>First aid Course</h2>
-      <p>
-        Duration: 6 months <br />
-        Fees: R1500 <br />
-        Mode:In-person <br />
-      </p>
+    <div class="cont">
+      <div class="conteudoCourses">
+        <img src="images/first.jpg" alt="" width="1336" height="450" />
+        <div class="box1">
+          <h2>First aid Course</h2>
+          <p>
+            Duration: 6 months <br />
+            Fees: R1500 <br />
+            Mode:In-person <br />
+          </p>
+        </div>
+      </div>
+      <div class="box1">
+  
+        <h2>About the course</h2>
+        <p>
+          This 6-month course is designed to provide participants with essential <br>
+          first aid awareness and basic life support skills. It is ideal for <br>
+          anyone looking to learn how to respond effectively to common emergencies <br>
+          and provide life-saving assistance.
+        </p>
+      </div>
+      <div class="box1">
+        <h2>Purpose:</h2>
+        <p>
+          To equip participants with the knowledge and skills necessary to perform <br>
+          first aid and basic life support, ensuring they can respond effectively <br>
+          in emergency situations.
+        </p>
     </div>
-    <div class="conteudoCoursestext">
-      <h2>About the course</h2>
-      <p>
-        This 6-month course is designed to provide participants with essential <br>
-        first aid awareness and basic life support skills. It is ideal for <br>
-        anyone looking to learn how to respond effectively to common emergencies <br>
-        and provide life-saving assistance.
-      </p>
-      <h2>Purpose:</h2>
-      <p>
-        To equip participants with the knowledge and skills necessary to perform <br>
-        first aid and basic life support, ensuring they can respond effectively <br>
-        in emergency situations.
-      </p>
-      <h2>Course Content:</h2>
-      <p>
-        Wounds and Bleeding: How to manage and treat various types of wounds and
-        control bleeding. <br />
-        Burns and Fractures: Understanding how to assess and provide care for
-        burns and fractures. <br />
-        Emergency Scene Management: Steps to manage an emergency scene safely
-        and efficiently. <br />
-        Cardio-Pulmonary Resuscitation (CPR): Techniques for performing CPR in
-        cases of cardiac arrest. <br />
-        Respiratory Distress: Responding to respiratory emergencies such as
-        choking or blocked airways.
-      </p>
+    <div class="box1">
+        <h2>Course Content:</h2>
+        <p>
+          Wounds and Bleeding: How to manage and treat various types of wounds and
+          control bleeding. <br />
+          Burns and Fractures: Understanding how to assess and provide care for
+          burns and fractures. <br />
+          Emergency Scene Management: Steps to manage an emergency scene safely
+          and efficiently. <br />
+          Cardio-Pulmonary Resuscitation (CPR): Techniques for performing CPR in
+          cases of cardiac arrest. <br />
+          Respiratory Distress: Responding to respiratory emergencies such as
+          choking or blocked airways.
+        </p>
+    </div>
+    <div class="box2">
       <a href="courses.html"><button class="button">Back</button></a>
       <a href="sewing.html"><button class="button">Next</button></a>
     </div>
+    </div>
+    <footer>
+      <p>Copyright 2024</p>
+      <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a></li>
+      <li><a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a></li>
+      <li><a href="https://mail.google.com/"><i class="fa-solid fa-envelope"></i></a></li>
+    </footer>
+    <!--GreatStack
+    YouTube video
+    How To Make Website Using HTML & CSS | Full Responsive Multi Page Website Design Step by Step 2021
+    available at:https://youtu.be/oYRda7UtuhA?si=J2gH1iwy5SKf8CMM
+    Accessed at:23/09/2024
+    -->
+          <!--javascript-->
+          <script>
+
+
+            var navLinks = document.getElementById("navLinks");
+      
+       function showmenu(){
+           navLinks.style.right ="0";
+       }
+      
+       function hidemenu(){
+           navLinks.style.right ="-200px";
+       }
+       </script>
+
   </body>
 </html>
