--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--PRAROZ, 2021
+How To Create A Website using HTML & CSS | Step-by-Step Tutorial.
+YouTube video
+https://youtu.be/CQZxeoQeo5c
+Accessed at: 2 Setember 2024
+--> 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +29,8 @@
             the Nation
           </h2>
         </div>
-        <div class="menu">
+        <div class="menu" id="navLinks">
+          <i class="fa fa-times" onclick="hidemenu()"></i>
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -37,6 +44,7 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
+          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
         <div class="search">
           <input
@@ -49,6 +57,7 @@
         </div>
       </div>
     </div>
+    <!--end here-->
       <div class="content">
         <div class="text-content">
           <h2>Empowering the Nation</h2>
@@ -71,8 +80,32 @@
         </div>
       </div>
       </div>
-       
-     
+      <footer>
+        <p>Copyright 2024</p>
+        <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a></li>
+        <li><a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a></li>
+        <li><a href="https://mail.google.com/"><i class="fa-solid fa-envelope"></i></a></li>
+      </footer>
+<!--GreatStack
+    YouTube video
+    How To Make Website Using HTML & CSS | Full Responsive Multi Page Website Design Step by Step 2021
+    available at:https://youtu.be/oYRda7UtuhA?si=J2gH1iwy5SKf8CMM
+    Accessed at:23/09/2024
+    -->
+      <!--javascript-->
+    <script>
 
+
+      var navLinks = document.getElementById("navLinks");
+
+ function showmenu(){
+     navLinks.style.right ="0";
+ }
+
+ function hidemenu(){
+     navLinks.style.right ="-200px";
+ }
+ </script>
   </body>
 </html>
