--- a/news.html
+++ b/news.html
@@ -20,7 +20,8 @@
           <img src="images/logo.jpg" alt="" width="100" height="100" />
           <h2 class="logo">Empowering <br />the Nation</h2>
         </div>
-        <div class="menu">
+        <div class="menu" id="navLinks">
+          <i class="fa fa-times" onclick="hidemenu()"></i>
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -28,12 +29,13 @@
             <li><a href="news.html">NEWS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li>
-              <a href="invoice.html">
-             <i class="fa-solid fa-cart-shopping"></i
+              <a href="invoice.html"
+                ><i class="fa-solid fa-cart-shopping"></i
               ></a>
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
+          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
         <div class="search">
           <input
@@ -46,7 +48,6 @@
         </div>
       </div>
     </div>
-    
       <div class="contented">
         <div class="image-contented">
           <img
@@ -83,6 +84,32 @@
           </a>
         </div>
       </div>
-   
+      <footer>
+        <p>Copyright 2024</p>
+        <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a></li>
+        <li><a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a></li>
+        <li><a href="https://mail.google.com/"><i class="fa-solid fa-envelope"></i></a></li>
+      </footer>
+      <!--GreatStack
+    YouTube video
+    How To Make Website Using HTML & CSS | Full Responsive Multi Page Website Design Step by Step 2021
+    available at:https://youtu.be/oYRda7UtuhA?si=J2gH1iwy5SKf8CMM
+    Accessed at:23/09/2024
+    -->
+            <!--javascript-->
+    <script>
+
+
+      var navLinks = document.getElementById("navLinks");
+
+ function showmenu(){
+     navLinks.style.right ="0";
+ }
+
+ function hidemenu(){
+     navLinks.style.right ="-200px";
+ }
+ </script>
   </body>
 </html>
