--- a/sign.html
+++ b/sign.html
@@ -50,14 +50,13 @@
         </div>
       </div>
       <div class="form-log">
-        <h2>Log in</h2>
+        <h2>Sign in</h2>
         <form >
             <input type="text" placeholder="Name" required>
             <input type="email" placeholder="Email" required>
             <input type="password" placeholder="Password" required>
           </form>
-          <a href="index.html" class="buttons">Log in</a>
-          <p>Don't have an account? <a href="sign.html">Sign up</a></p>
+          <a href="index.html" class="buttons">sign in</a>
     </div>
 </body>
 </html>
