a lot of achanges

--- a/news.html
+++ b/news.html
@@ -35,8 +35,8 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
         <div class="search">
           <input
             class="srch"
@@ -47,6 +47,8 @@
           <button class="btn">Search</button>
         </div>
       </div>
+      <h1>Empowering the Nation</h1>
+      <h2>News</h2>
     </div>
       <div class="contented">
         <div class="image-contented">
