--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
         <div class="search">
           <input
             class="srch"
@@ -50,6 +50,8 @@
           <button class="btn">Search</button>
         </div>
       </div>
+      <h1>Empowering the Nation</h1>
+      <h2>About us</h2>
     </div>
     <div class="cont">
       <div class="image">
