--- a/child.html
+++ b/child.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <div class="main">
+    <div class="mainc">
       <div class="navbar">
         <div class="icon">
           <img src="images/logo.jpg" alt="" width="100" height="100" />
@@ -38,8 +38,8 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
         <div class="search">
           <input
             class="srch"
@@ -51,8 +51,8 @@
         </div>
       </div>
     </div>
+    <div class="cont">
       <div class="conteudoCourses">
-        <img src="images/child.jpeg" alt="" width="1336" height="450" />
         <div class="box1">
           <h2>Child Minding Course</h2>
         <p>
@@ -97,6 +97,7 @@
         <a href="cook.html"><button class="button">Next</button></a>
       
     </div>
+  </div>
     <footer>
       <p>Copyright 2024</p>
       <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
