--- a/courses.html
+++ b/courses.html
@@ -39,8 +39,8 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
         <div class="search">
           <input
             class="srch"
@@ -51,6 +51,8 @@
           <button class="btn">Search</button>
         </div>
       </div>
+      <h1>Empowering the Nation</h1>
+      <h2>Courses</h2>
     </div>
     <div class="cont">
       <div class="conteudo">
