--- a/garden.html
+++ b/garden.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <div class="main">
+    <div class="maing">
       <div class="navbar">
         <div class="icon">
           <img src="images/logo.jpg" alt="" width="100" height="100" />
@@ -38,8 +38,8 @@
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
         <div class="search">
           <input
             class="srch"
@@ -53,7 +53,6 @@
     </div>
     <div class="cont">
       <div class="conteudoCourses">
-        <img src="images/garden.jpg" alt="" width="1336" height="450" />
         <div class="box1">
           <h2>Garden maintenance Course</h2>
         <p>
