--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Accessed at: 2 Setember 2024
             </li>
             <li><a href="log.html"><i class="fa-solid fa-user"></i></a></li>
           </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
         </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
         <div class="search">
           <input
             class="srch"
@@ -56,6 +56,8 @@ Accessed at: 2 Setember 2024
           <button class="btn">Search</button>
         </div>
       </div>
+      <h1>Empowering the Nation</h1>
+      <h2>Home</h2>
     </div>
     <!--end here-->
       <div class="content">
@@ -80,6 +82,22 @@ Accessed at: 2 Setember 2024
         </div>
       </div>
       </div>
+   <!--testimonials-->
+   <section class="testimonials">
+    <h1>Our team</h1>
+  <div class="row">
+<div class="testimonials-col">
+<img src="_images/user1.jpg" alt="">
+</div>
+<div class="testimonials-col">
+<img src="_images/user2.jpg" alt="">
+</div>
+
+</div>
+  
+</section>
+
+
       <footer>
         <p>Copyright 2024</p>
         <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
