--- a/invoice.html
+++ b/invoice.html
@@ -1,251 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invoice</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <div class="main">
-      <div class="navbar">
-        <div class="icon">
-          <img src="images/logo.jpg" alt="" width="100" height="100" />
-          <h2 class="logo">
-            Empowering <br />
-            the Nation
-          </h2>
-        </div>
-        <div class="menu" id="navLinks">
-          <i class="fa fa-times" onclick="hidemenu()"></i>
-          <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="courses.html">COURSES</a></li>
-            <li><a href="news.html">NEWS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-            <li>
-              <a href="invoice.html"
-                ><i class="fa-solid fa-cart-shopping"></i
-              ></a>
-            </li>
-            <li>
-              <a href="log.html"><i class="fa-solid fa-user"></i></a>
-            </li>
-          </ul>
-          <i class="fa fa-bars" onclick="showmenu()"></i>
-        </div>
-        <div class="search">
-          <input
-            class="srch"
-            type="search"
-            name="search"
-            placeholder="Type to search"
-          />
-          <button class="btn">Search</button>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Invoice</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <div class="main">
+    <div class="navbar">
+      <div class="icon">
+        <img src="images/logo.jpg" alt="" width="100" height="100" />
+        <h2 class="logo">
+          Empowering <br />
+          the Nation
+        </h2>
+      </div>
+      <div class="menu" id="navLinks">
+        <i class="fa fa-times" onclick="hidemenu()"></i>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="courses.html">COURSES</a></li>
+          <li><a href="news.html">NEWS</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li>
+            <a href="invoice.html"><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+          <li>
+            <a href="log.html"><i class="fa-solid fa-user"></i></a>
+          </li>
+        </ul>
+      </div>
+      <i class="fa fa-bars" onclick="showmenu()"></i>
+      <div class="search">
+        <input class="srch" type="search" name="search" placeholder="Type to search" />
+        <button class="btn">Search</button>
       </div>
     </div>
+  </div>
 
-    <div class="cont">
-      <table class="table-style">
-        <tr>
-          <td class="td1">
-            <h2>SIX MONTHS</h2>
-            <input type="checkbox" class="course" value="1750" placeholder="First aid" /> First aid (R$1750) <br />
-            <input type="checkbox" class="course" value="1750" placeholder="Sewing" /> Sewing (R$1750) <br />
-            <input type="checkbox" class="course" value="1750" placeholder="Landscaping" /> Landscaping (R$1750) <br />
-            <input type="checkbox" class="course" value="1750" placeholder="Life skills" /> Life skills (R$1750) <br />
-          </td>
-          <td >
-            <h2>SIX Weeks</h2>
-            <input type="checkbox" class="course" value="750" placeholder="Childminding" /> Childminding (R$750) <br />
-            <input type="checkbox" class="course" value="750" placeholder="Cooking" /> Cooking (R$750) <br />
-            <input type="checkbox" class="course" value="750" placeholder="Garden Maintenance" /> Garden Maintenance (R$750) <br />
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <p>Total: R$<span id="total">0</span></p>
-          </td>
-        </tr>
-        <tr>
-              <!--GreatStack. 2022
+  <div class="cont">
+
+    <table class="table-style">
+      <tr>
+        <td>
+          <form id="course-form">
+            <h2>Enter your contact details:</h2>
+            <input type="text" id="name" name="name" placeholder="Name" required><br /><br />
+            <input type="tel" id="phone" name="phone" placeholder="+27" required><br /><br />
+            <input type="email" id="email" name="email" placeholder="Email" required><br /><br />
+        </td>
+      </tr>
+      <tr>
+        <td class="td1">
+          <h2>SIX MONTHS</h2>
+          <input type="checkbox" class="course" value="1500" placeholder="First aid" /> First aid (R$1500) <br />
+          <input type="checkbox" class="course" value="1500" placeholder="Sewing" /> Sewing (R$1500) <br />
+          <input type="checkbox" class="course" value="1500" placeholder="Landscaping" /> Landscaping (R$1500) <br />
+          <input type="checkbox" class="course" value="1500" placeholder="Life skills" /> Life skills (R$1500) <br />
+        </td>
+        <td>
+          <h2>SIX Weeks</h2>
+          <input type="checkbox" class="course" value="750" placeholder="Childminding" /> Childminding (R$750) <br />
+          <input type="checkbox" class="course" value="750" placeholder="Cooking" /> Cooking (R$750) <br />
+          <input type="checkbox" class="course" value="750" placeholder="Garden Maintenance" /> Garden Maintenance
+          (R$750) <br />
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p>Total: R$<span id="total">0</span></p>
+          <p>Avarege:<span id="avarege"></span></p>
+          <p>Discounts: <span id="discount"></span> </p>
+        </td>
+      </tr>
+      <tr>
+        <!--GreatStack. 2022
       How To Make A Popup Using HTML, CSS And JavaScript | Create a Modal Box In HTML Website
       YouTube video
       Available at: https://youtu.be/AF6vGYIyV8M?si=SNBq3sHGZ5XxSMKS
      accessed at: 01/10/24
       -->
-          <td class="submit-btn">
-            <button type="submit" class="btns" onclick="openPopup()">
-              Pay
-            </button>
-          </td>
-        </tr>
-      </table>
-      <div class="popup" id="popup">
-        <!--end here-->
-        <!--Web CodePro, 2021
+        <td class="submit-btn">
+          <button type="submit" class="btns" onclick="openPopup()">
+            Pay
+          </button>
+        </td>
+      </tr>
+    </table>
+    <div class="popup" id="popup">
+      <!--end here-->
+      <!--Web CodePro, 2021
         How To Make Simple Payment Page Using HTML & CSS | HTML CSS Tutorial For Beginners
         YouTube video
         Available at: https://youtu.be/lN9B4uvqVBU?si=CA1VrTJCTYvpMbIw
      accessed at:23/09/2024
         -->
-        <div class="container">
-          <h1>Confirm your Payment</h1>
-          <div class="first-row">
-            <div class="owner">
-              <h3>Owner</h3>
-              <div class="input-field">
-                <input type="text" placeholder="Name" />
-              </div>
-            </div>
-            <div class="cvv">
-              <h3>CVV</h3>
-              <input type="password" placeholder="CVV" />
+      <div class="container">
+        <h1>Confirm your Payment</h1>
+        <div class="first-row">
+          <div class="owner">
+            <h3>Owner</h3>
+            <div class="input-field">
+              <input type="text" placeholder="Name" />
             </div>
           </div>
-          <div class="second-row">
-            <div class="card-number">
-              <h3>card-number</h3>
-              <div class="input-field">
-                <input type="text" placeholder="card-number" />
-              </div>
-            </div>
+          <div class="cvv">
+            <h3>CVV</h3>
+            <input type="password" placeholder="CVV" />
           </div>
-          <div class="third-row">
-            <h3>card-number</h3>
-            <div class="selection">
-              <div class="date">
-                <select name="months" id="months" title="months">
-                  <option value="Jan">Jan</option>
-                  <option value="Feb">Feb</option>
-                  <option value="Mar">Mar</option>
-                  <option value="Apr">Apr</option>
-                  <option value="May">May</option>
-                  <option value="Jun">Jun</option>
-                  <option value="Jul">Jul</option>
-                  <option value="Aug">Aug</option>
-                  <option value="Sep">Sep</option>
-                  <option value="Oct">Oct</option>
-                  <option value="Nov">Nov</option>
-                  <option value="Dec">Dec</option>
-                </select>
-                <select name="years" id="years" title="years">
-                  <option value="2024">2024</option>
-                  <option value="2023">2023</option>
-                  <option value="2022">2022</option>
-                  <option value="2021">2021</option>
-                  <option value="2020">2020</option>
-                  <option value="2019">2019</option>
-                  <option value="2018">2018</option>
-                  <option value="2017">2017</option>
-                  <option value="2016">2016</option>
-                  <option value="2015">2015</option>
-                  <option value="2014">2014</option>
-                  <option value="2013">2013</option>
-                  <option value="2012">2012</option>
-                  <option value="2011">2011</option>
-                  <option value="2010">2010</option>
-                  <option value="2009">2009</option>
-                  <option value="2008">2008</option>
-                  <option value="2007">2007</option>
-                  <option value="2006">2006</option>
-                  <option value="2005">2005</option>
-                </select>
-              </div>
-              <div class="cards">
-                <img src="images/mc.png" alt="" />
-                <img src="images/vi.png" alt="" />
-                <img src="images/pp.png" alt="" />
-              </div>
-            </div>
-          </div>
-          <a href="" onclick="closePopup()">Confirm</a>
         </div>
+        <div class="second-row">
+          <div class="card-number">
+            <h3>card-number</h3>
+            <div class="input-field">
+              <input type="number" placeholder="XXXX XXXX XXXX" />
+            </div>
+          </div>
+        </div>
+        <div class="third-row">
+          <h3>Experation date:</h3>
+          <div class="selection">
+            <div class="date">
+              <select name="months" id="months" title="months">
+                <option value="Jan">Jan</option>
+                <option value="Feb">Feb</option>
+                <option value="Mar">Mar</option>
+                <option value="Apr">Apr</option>
+                <option value="May">May</option>
+                <option value="Jun">Jun</option>
+                <option value="Jul">Jul</option>
+                <option value="Aug">Aug</option>
+                <option value="Sep">Sep</option>
+                <option value="Oct">Oct</option>
+                <option value="Nov">Nov</option>
+                <option value="Dec">Dec</option>
+              </select>
+              <select name="years" id="years" title="years">
+                <option value="2035">2035</option>
+                <option value="2034">2034</option>
+                <option value="2033">2033</option>
+                <option value="2032">2032</option>
+                <option value="2031">2031</option>
+                <option value="2030">2030</option>
+                <option value="2029">2029</option>
+                <option value="2028">2028</option>
+                <option value="2027">2027</option>
+                <option value="2026">2026</option>
+                <option value="2025">2025</option>
+                <option value="2024">2024</option>
+              </select>
+            </div>
+            <div class="cards">
+              <img src="images/mc.png" alt="" />
+              <img src="images/vi.png" alt="" />
+              <img src="images/pp.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <a href="" onclick="closePopup()">Confirm</a>
       </div>
     </div>
-    <footer>
-      <p>Copyright 2024</p>
-      <li>
-        <a href="https://www.instagram.com/"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-      </li>
-      <li>
-        <a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a>
-      </li>
-      <li>
-        <a href="https://www.facebook.com/"
-          ><i class="fa-brands fa-square-facebook"></i
-        ></a>
-      </li>
-      <li>
-        <a href="https://mail.google.com/"
-          ><i class="fa-solid fa-envelope"></i
-        ></a>
-      </li>
-    </footer>
-    <!--javascript-->
-  
-    <script>
-        //GreatStack. 2022
-      //How To Make Website Using HTML & CSS | Full Responsive Multi Page Website Design Step by Step
-      //YouTube video
-      //Available at: https://youtu.be/oYRda7UtuhA 
-     //accessed at: 01/10/24
-      var navLinks = document.getElementById("navLinks");
+  </div>
+  <footer>
+    <p>Copyright 2024</p>
+    <li>
+      <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+    </li>
+    <li>
+      <a href="https://x.com/"><i class="fa-brands fa-x-twitter"></i></a>
+    </li>
+    <li>
+      <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+    </li>
+    <li>
+      <a href="https://mail.google.com/"><i class="fa-solid fa-envelope"></i></a>
+    </li>
+  </footer>
+  <!--javascript-->
 
-      function showmenu() {
-        navLinks.style.right = "0";
-      }
+  <script>
+    //GreatStack. 2022
+    //How To Make Website Using HTML & CSS | Full Responsive Multi Page Website Design Step by Step
+    //YouTube video
+    //Available at: https://youtu.be/oYRda7UtuhA 
+    //accessed at: 01/10/24
+    var navLinks = document.getElementById("navLinks");
 
-      function hidemenu() {
-        navLinks.style.right = "-200px";
-      }
-      //GreatStack. 2022
-      //How To Make A Popup Using HTML, CSS And JavaScript | Create a Modal Box In HTML Website
-      //YouTube video
-      //Available at: https://youtu.be/AF6vGYIyV8M?si=SNBq3sHGZ5XxSMKS
-     //accessed at: 01/10/24
-      let popup = document.getElementById("popup");
+    function showmenu() {
+      navLinks.style.right = "0";
+    }
 
-      function openPopup() {
-        popup.classList.add("open-popup");
-      }
-      function closePopup() {
-        popup.classList.remove("open-popup");
-      }
+    function hidemenu() {
+      navLinks.style.right = "-200px";
+    }
+    //GreatStack. 2022
+    //How To Make A Popup Using HTML, CSS And JavaScript | Create a Modal Box In HTML Website
+    //YouTube video
+    //Available at: https://youtu.be/AF6vGYIyV8M?si=SNBq3sHGZ5XxSMKS
+    //accessed at: 01/10/24
+    let popup = document.getElementById("popup");
 
-     //intact Adobe, 2018, 
-     //How to Calculate Two Textbox Values in Javascript HTML,
-     // YouTube video, 
-     //available at: https://youtu.be/v6WgrDwgx2U?si=O53fIZkIS5ypOQ_j , 
-     //accessed at: 01/10/24
-     
-      const checkboxes = document.querySelectorAll('.course');
+    function openPopup() {
+      popup.classList.add("open-popup");
+    }
+    function closePopup() {
+      popup.classList.remove("open-popup");
+    }
+
+    //intact Adobe, 2018, 
+    //How to Calculate Two Textbox Values in Javascript HTML,
+    // YouTube video, 
+    //available at: https://youtu.be/v6WgrDwgx2U?si=O53fIZkIS5ypOQ_j , 
+    //accessed at: 01/10/24
+
+    const checkboxes = document.querySelectorAll('.course');
     const totalDisplay = document.getElementById('total');
+    const averageDisplay = document.getElementById('avarege');
+    const discountDisplay = document.getElementById('discount');
+    const vatRate = 0.15;
 
     function calculateTotal() {
-        let total = 0;
-        checkboxes.forEach((checkbox) => {
-            if (checkbox.checked) {
-                total += parseFloat(checkbox.value);
-            }
-        });
-        totalDisplay.textContent = total.toFixed(2);
+      let total = 0;
+      checkboxes.forEach((checkbox) => {
+        if (checkbox.checked) {
+          total += parseFloat(checkbox.value);
+        }
+      });
+      totalDisplay.textContent = total.toFixed(2);
     }
 
     checkboxes.forEach((checkbox) => {
-        checkbox.addEventListener('change', calculateTotal);
+      checkbox.addEventListener('change', calculateTotal);
     });
-    </script>
-  </body>
+    function calculateTotalAndAverage() {
+  let total = 0;
+  let checkedCount = 0;
+
+  checkboxes.forEach((checkbox) => {
+    if (checkbox.checked) {
+      total += parseFloat(checkbox.value);
+      checkedCount++;
+    }
+  });
+
+  // Determine discount based on the number of selected courses
+  let discountRate = 0;
+  if (checkedCount === 2) {
+    discountRate = 0.05;  // 5% discount for two courses
+  } else if (checkedCount === 3) {
+    discountRate = 0.10;  // 10% discount for three courses
+  } else if (checkedCount > 3) {
+    discountRate = 0.15;  // 15% discount for more than three courses
+  }
+
+  // Calculate discount
+  const discountAmount = total * discountRate;
+  const discountedTotal = total - discountAmount;
+
+  // Apply VAT (15%)
+  const vatAmount = discountedTotal * vatRate;
+  const finalTotal = discountedTotal + vatAmount;
+
+  // Calculate average
+  const average = checkedCount > 0 ? (finalTotal / checkedCount).toFixed(2) : 0;
+
+  // Update displays
+  totalDisplay.textContent = finalTotal.toFixed(2);
+  averageDisplay.textContent = average;
+  discountDisplay.textContent = discountAmount.toFixed(2); // Display discount
+}
+
+checkboxes.forEach((checkbox) => {
+  checkbox.addEventListener('change', calculateTotalAndAverage);
+});
+function validateForm() {
+    const name = document.getElementById('name').value;
+    const phone = document.getElementById('phone').value;
+    const email = document.getElementById('email').value;
+
+    if (name === '' || phone === '' || email === '') {
+        alert('Please fill in all required fields.');
+    } else {
+        openPopup(); // Call your function to open the popup here
+    }
+}
+
+  </script>
+</body>
+
 </html>
