--- a/child.html
+++ b/child.html
@@ -91,6 +91,9 @@
           Educational Toys: The role of toys in child development and how to select age-appropriate educational tools.
         </p>
       </div>
+      <div class="box1">
+        <iframe width="750" height="315" src="https://www.youtube.com/embed/QZmNDtvVcCE?si=5QRD845wOU0XLNQj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
       
       <div class="box2">
         <a href="courses.html"><button class="button">Back</button></a>
