--- a/cook.html
+++ b/cook.html
@@ -90,6 +90,9 @@
           Preparation and Cooking of Meals: Practical skills for preparing and cooking meals that meet nutritional needs.
         </p>
       </div>
+      <div class="box1">
+        <iframe width="750" height="315" src="https://www.youtube.com/embed/SrpR1qH3NN4?si=oxdPz5I_0j0HKfq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
       
       <div class="box2">
         <a href="child.html"><button class="button">Back</button></a>
