--- a/firstaid.html
+++ b/firstaid.html
@@ -95,6 +95,9 @@
           choking or blocked airways.
         </p>
     </div>
+    <div class="box1">
+      <iframe class="inframe" width="750" height="315" src="https://www.youtube.com/embed/VBL7ICiIjkg?si=hSEBeNHGRuVRIrmW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
     <div class="box2">
       <a href="courses.html"><button class="button">Back</button></a>
       <a href="sewing.html"><button class="button">Next</button></a>
