--- a/garden.html
+++ b/garden.html
@@ -89,7 +89,9 @@
           Planting Techniques: Practical guidance on how to plant different types of plants, including proper soil preparation and planting methods.
         </p>
       </div>
-      
+      <div class="box1">
+        <iframe width="750" height="315" src="https://www.youtube.com/embed/7y4T6yv5L1k?si=phFpESBFtnkcVfGk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
       <div class="box2">
         <a href="cook.html"><button class="button">Back</button></a>
         <a href="courses.html"><button class="button">Next</button></a>
