--- a/sewing.html
+++ b/sewing.html
@@ -88,7 +88,9 @@
             Designing and Sewing New Garments: Explore garment design and practice creating new clothes.
           </p>
         </div>
-        
+        <div class="boxq">
+          <iframe class="inframe" width="750" height="315" src="https://www.youtube.com/embed/cvxiSk5dH3U?si=SLpeVxW0vwtEbhjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
       
       <div class="box2">
         <a href="firstaid.html"><button class="button">Back</button></a>
