--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
   
    
   <div class="box">
-    <h2>WHy we do it</h2>
+    <h2>Why we do it</h2>
     <p>
       With a commitment to community development, we continue to grow and
       <br />
