--- a/invoice_two.html
+++ b/invoice_two.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="main">
@@ -46,16 +50,16 @@
         <h2>Courses</h2>
         <h3>Six-Month</h3>
       </div>
-    <h1>Invoice</h1>
-    <div class="connt">
+      <h1>Invoice</h1>
+      <div class="connt">
         <h1>Invoice Confirmation</h1>
-        <p><strong>Name:</strong> <span id="nameDisplay"></span></p>
-        <p><strong>Phone:</strong> <span id="phoneDisplay"></span></p>
-        <p><strong>Email:</strong> <span id="emailDisplay"></span></p>
-        <p><strong>Address:</strong> <span id="addressDisplay"></span></p>
-        <p><strong>City:</strong> <span id="cityDisplay"></span></p>
-        <p><strong>State:</strong> <span id="stateDisplay"></span></p>
-        </div>
+        <p>Name: <span id="name"></span></p>
+        <p>Phone: <span id="phone"></span></p>
+        <p>Email: <span id="email"></span></p>
+        <p>Address: <span id="address"></span></p>
+        <p>City: <span id="city"></span></p>
+        <p>State: <span id="state"></span></p>
+      </div>
         <footer>
             <p>Copyright 2024</p>
             <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
@@ -82,12 +86,12 @@
              function hidemenu(){
                  navLinks.style.right ="-200px";
              }
-             document.getElementById('nameDisplay').textContent = localStorage.getItem('name');
-        document.getElementById('phoneDisplay').textContent = localStorage.getItem('phone');
-        document.getElementById('emailDisplay').textContent = localStorage.getItem('email');
-        document.getElementById('addressDisplay').textContent = localStorage.getItem('address');
-        document.getElementById('cityDisplay').textContent = localStorage.getItem('city');
-        document.getEl
+             document.getElementById('name').innerText = localStorage.getItem('name');
+    document.getElementById('phone').innerText = localStorage.getItem('phone');
+    document.getElementById('email').innerText = localStorage.getItem('email');
+    document.getElementById('address').innerText = localStorage.getItem('address');
+    document.getElementById('city').innerText = localStorage.getItem('city');
+    document.getElementById('state').innerText = localStorage.getItem('state');
              </script>
 </body>
 </html>
