--- a/life.html
+++ b/life.html
@@ -86,7 +86,9 @@
             Basic Numeric Literacy: Develop skills to handle everyday calculations, budgeting, and financial decision-making.
           </p>
         </div>
-        
+<div class="box1">
+  <iframe class="inframe" width="750" height="315" src="https://www.youtube.com/embed/sids6PjkC1I?si=hBGkx6okNybY2nPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>        
       
       <div class="box2">
         <a href="landscaping.html"><button class="button">Back</button></a>
