--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Accessed at: 2 Setember 2024
           </a>
         </div>
         <div class="image-content">
-          <img src="images/graduation.png" alt="Lady Graduating" />
+          <img src="images/about.jpg" alt="Lady Graduating" />
         </div>
       </div>
       </div>
