SEO tags and variables passing

--- a/child.html
+++ b/child.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Child Minding</title>
+    <meta name="description" content="Child Minding Course" />
+    <title>Childminding Course</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -92,7 +93,7 @@
         </p>
       </div>
       <div class="box1">
-        <iframe width="750" height="315" src="https://www.youtube.com/embed/QZmNDtvVcCE?si=5QRD845wOU0XLNQj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="inframe"  width="750" height="315" src="https://www.youtube.com/embed/QZmNDtvVcCE?si=5QRD845wOU0XLNQj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       
       <div class="box2">
