--- a/cook.html
+++ b/cook.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cooking</title>
+    <meta name="description" content="Cooking Course" />
+    <title>Cooking Course </title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -91,7 +92,7 @@
         </p>
       </div>
       <div class="box1">
-        <iframe width="750" height="315" src="https://www.youtube.com/embed/SrpR1qH3NN4?si=oxdPz5I_0j0HKfq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="inframe" width="750" height="315" src="https://www.youtube.com/embed/SrpR1qH3NN4?si=oxdPz5I_0j0HKfq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       
       <div class="box2">
