--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <meta name="description" content="Empowering the Nation - About" />
+    <title>About us - Empowering the Nation</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
