--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Courses</title>
+    <meta name="description" content="Empowering the Nation - Courses" />
+    <title>Courses - Empowering the Nation</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
