--- a/firstaid.html
+++ b/firstaid.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First Aid</title>
+    <meta name="description" content="First Aid Course" />
+    <title>First Aid Course</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
