--- a/garden.html
+++ b/garden.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Garden Maintenance</title>
+    <meta name="description" content="Garden Maintenance Course" />
+    <title>Garden Maintenance Course</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -90,7 +91,7 @@
         </p>
       </div>
       <div class="box1">
-        <iframe width="750" height="315" src="https://www.youtube.com/embed/7y4T6yv5L1k?si=phFpESBFtnkcVfGk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="inframe" width="750" height="315" src="https://www.youtube.com/embed/7y4T6yv5L1k?si=phFpESBFtnkcVfGk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
       <div class="box2">
         <a href="cook.html"><button class="button">Back</button></a>
