--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ Accessed at: 2 Setember 2024
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <meta name="description" content="Empowering the Nation - Home" />"
+    <title>Home - Empowering the Nation</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
