--- a/log.html
+++ b/log.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in page</title>
+    <meta name="description" content="Empowering the Nation - Log in">
+    <title>Log in page - Empowering the Nation</title>
     <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
