--- a/sewing.html
+++ b/sewing.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sewing</title>
+    <meta name="description" content="Sewing Course" />
+    <title>Sewing Course</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
