--- a/week.html
+++ b/week.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Six-Week</title>
+    <meta name="description" content="Empowering the Nation - Six-Week Courses" />
+    <title>Six-Week Courses - Empowering the Nation</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
