images ,please stop

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     <div class="cont">
       <div class="image">
         <h1>About us</h1>
-        <img src="images/about.jpg" alt="" width="1336" height="450" style="border-radius: 5%; text-align: center;" />
+        <img src="images/about.png" alt="" width="1336" height="450" style="border-radius: 5%; text-align: center;" />
       </div>
       <div class="conteudodos">
   <div class="box">
