--- a/invoice.html
+++ b/invoice.html
@@ -171,7 +171,7 @@
             </div>
           </div>
         </div>
-        <button class="botao" type="submit" onclick="submitForm(); window.location.href='invoice_two.html';">Pay</button>
+        <button class="btn" type="submit" onclick="submitForm(); window.location.href='invoice_two.html';">Pay</button>
     </div>
   </div>
   </div>
