--- a/week.html
+++ b/week.html
@@ -61,13 +61,13 @@
         <tr>
           <td>
             <div class="miniscreen2">
-              <img src="images/child.jpeg" alt="" width="240" height="200" />
+              <img src="images/child.webp" alt="" width="240" height="200" />
               <h1>Child minding</h1>
             </div>
           </td>
           <td>
             <div class="miniscreen2">
-              <img src="images/cooking.jpeg" alt="" width="240" height="200" />
+              <img src="images/cooking.jpg" alt="" width="240" height="200" />
               <h1>Cooking</h1>
             </div>
           </td>
