--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@ Accessed at: 2 Setember 2024
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Empowering the Nation - Home" />"
     <title>Home - Empowering the Nation</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="payment_footer.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
