--- a/invoice_two.html
+++ b/invoice_two.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Confirmation page for your Empowering the Nation course registration. View your invoice details and payment information." />
     <title> Confirmation Page </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="payment_footer.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -44,11 +47,7 @@
         </div>
         <i class="fa fa-bars" onclick="showmenu()"></i>
       </div>
-      <h1>Empowering the Nation</h1>
-      <h2>Courses</h2>
-      <h3>Six-Month</h3>
     </div>
-    <h1>Invoice</h1>
     <div class="connt">
       <h1>Invoice Confirmation</h1>
      <!--Web Dev Simplified,2019
